--- a/login.css
+++ b/login.css
@@ -11,6 +11,13 @@ header{
 }
 .nav_bar{
     padding: 20px;
+    display: flex;
+    flex-direction: row;
+    animation-name: nav_bar;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    overflow: hidden;
 }
 .nav_barlogo{
     filter: drop-shadow(3px 6px 8px #6d00ff);
@@ -21,10 +28,10 @@ header{
 }
 @keyframes nav_barlogo {
     0%{
-        filter: drop-shadow(2px 4px 8px #7560a0);
+        filter: blur(1px);
     }
     100%{
-        filter: drop-shadow(0px 0px 0px #7560a0);
+        filter: blur(0px);
     }
 }
 main{
@@ -51,8 +58,8 @@ main{
     align-content: center;
     align-items: flex-start;
     justify-content: center;
-    padding: 54px;
-    gap: 67px;
+    padding: 94px;
+    gap: 13px;
 }
 h2{
     color: #795fa4;
@@ -95,10 +102,11 @@ input[type=checkbox]{
     background-color: #573c82;
 }
 .login-signup-now{
+    margin-top: 40px;
     padding: 5px;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 }
 .login-signup-now>p{
     font-size: 18px;
@@ -113,7 +121,7 @@ input[type=checkbox]{
     border-radius: 10px;
     background-color: #9e6ea9;
     font-size: 17px;
-    width: 99%;
+    width: 100%;
     height: 53px;
     font-weight: 700;
     box-shadow: inset 0px 0px 7px 0px #30135c;
@@ -137,6 +145,12 @@ input[type=checkbox]{
         font-size: 34px;
     }
     .login-signup-now{
-    gap: 60px;
+        gap: 60px;
+    }
+    .login-signup-now>p{
+        font-size: 15px;
+    }
+    .login-signup-now>a{
+        font-size: 12px;
     }
 }
