--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ a{
     animation-iteration-count: infinite;
     animation-duration: 2s;
 }
+.login-signup{
+    display: flex;
+    gap: 10px;
+}
 @keyframes logo {
     0%{
         filter: drop-shadow(0px 0px 0px #8764a6);
