--- a/feedback.css
+++ b/feedback.css
@@ -13,14 +13,13 @@ body{
     justify-content: center;
     font-size: 30px;
 }
+img{
+    width: 140px;
+}
 h1{
     display: flex;
     align-items: center;
-    font-family: cursive;
     font-weight: 100;
-}
-.navbar>h1>img{
-    width: 309px;
 }
 form{
     display: flex;
