--- a/feedback.css
+++ b/feedback.css
@@ -11,10 +11,11 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    font-size: 30px;
+    font-size: 20px;
 }
 img{
     width: 140px;
+    padding: 30px;
 }
 h1{
     display: flex;
