--- a/about.css
+++ b/about.css
@@ -80,4 +80,15 @@ footer{
 }
 footer>a{
     text-decoration: none;
+    color: #eea2ff;
+}
+.blob {
+    width: 690.5496215820312px;
+    height: 707.3934326171875px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url("data:image/svg+xml;utf8,%3Csvg xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 width=%22690.55%22 height=%22707.393%22 viewBox=%2286.673 171.428 690.55 707.393%22%3E%3Cdefs%3E%3CclipPath id=%22a%22%3E%3Cpath fill=%22currentColor%22 d=%22M745 653.5Q677 807 466 866T140 712.5Q25 500 158 319t318.5-140q185.5 41 261 181t7.5 293.5Z%22%2F%3E%3C%2FclipPath%3E%3C%2Fdefs%3E%3Cg clip-path=%22url(%23a)%22%3E%3Cpath fill=%22%239e6ea9%22 d=%22M745 653.5Q677 807 466 866T140 712.5Q25 500 158 319t318.5-140q185.5 41 261 181t7.5 293.5Z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
+    filter: blur(168px);
+    opacity: 0.3;
+    position: fixed;
 }
