--- a/style.css
+++ b/style.css
@@ -62,6 +62,15 @@ a{
     opacity: 0.3;
     position: fixed;
 }
+p{
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    color: #9e6ea9;
+}
+.date{
+    color: #9e6ea9;
+}
 @media screen and (max-width: 800px) {
     .a_navbar{
         gap: 24px;
